# Rustis

./: .gitignore  Cargo.toml  README.md  test.rdb
examples/: hello-redis.rs
src/: connection.rs  lib.rs
src/client/: mod.rs
src/cmd/: del.rs  get.rs  mod.rs  ping.rs  publish.rs  save.rs  set.rs  subscribe.rs  unknown.rs
src/networking/: connection.rs  frame.rs  mod.rs  parse.rs
src/persistence/: database.rs
src/server/: connection.rs  handler.rs  listener.rs  mod.rs  shutdown.rs
tests/: client.rs  server.rs
