[package]
name = "rust-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1"
atoi = "2.0.0"
clap = { version = "4.5", features = ["derive"] }

[features]
otel = []
