[package]
name = "rustis"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
async-stream = "0.3.0"
tracing = "0.1"
tracing-appender = { version = "0.2" }
tracing-subscriber = { version = "0.3", default-features = false, features = ["std", "env-filter", "fmt", "ansi", "json", "registry", "smallvec", "tracing-log", "time"] }
bytes = "1"
atoi = "2.0.0"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
bincode = "1.3"
serde = { version = "1", features = ["derive"] }
crossterm = "0.27"

[features]
otel = []

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }